--- a/app/index.html
+++ b/app/index.html
@@ -433,5 +433,11 @@
     </footer>
 
     <script src="index.js"></script>
+
+    <!-- Debugging-skript -->
+    <!-- Legg til dette rett før </body> i app/index.html -->
+    <script src="js/enhanced-logging.js"></script>
+    <script src="js/api-integration.js"></script>
+
 </body>
 </html>
