--- a/app/index.html
+++ b/app/index.html
@@ -439,5 +439,10 @@
     <script src="js/enhanced-logging.js"></script>
     <script src="js/api-integration.js"></script>
 
+    <script src="js/improved-api-integration.js"></script>
+
+    <!-- Forbedret skjemahåndtering -->
+    <script src="js/form-handler.js"></script>
+    
 </body>
 </html>
